[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynn-lite"
version = "0.1.0"
description = "A small educational neural network library"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [ { name = "sawsaw99-stack" } ]
keywords = ["neural-network", "machine-learning", "ml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
